testData/annotator/usesInImplementation.pas
unit usesInImplementation;

interface

var
    enum: <error descr="Undeclared identifier">TEnum</error>;
    set1: <error descr="Undeclared identifier">types</error>.<error descr="Undeclared identifier">TSet</error>;

implementation
uses
    <warning descr="W0001: Unused unit">types</warning>;

begin
end.
